# Pixelshop

./: CMakeLists.txt  README.md  app.manifest  build_and_run.bat
src/: ToolSpec.h  colors.h  main.cpp
src/ui/: sidebar.cpp  sidebar.h
src/ui/components/: icon_button.cpp  icon_button.h  panel_bordered.cpp  panel_bordered.h
